5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4174/executions/1715_3032.log
== TEST (2019-05-02 16:07:30) 
-- CODE:
from math import*

x = int(input("valor de x:"))

if(x <= 0):
	print(f(x)= x)

-- ERROR:
File "XXXX", line 6
    print(f(x)= x)
         ^
SyntaxError: keyword can't be an expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:09:34) 
-- CODE:
from math import*

x = int(input("valor de x:"))

if(x < 0 or x < 1 or x < 2 or x > 2):
	
	

-- ERROR:
File "XXXX", line 8
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:19:26) 
-- CODE:
from math import*

x = int(input("valor de x:"))

if(x < 0 or x < 1 or x < 2 or x > 2):
	
	

-- ERROR:
File "XXXX", line 8
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:19:27) 
-- CODE:
from math import*

x = int(input("valor de x:"))

if(x < 0 or x < 1 or x < 2 or x > 2):
	
	

-- ERROR:
File "XXXX", line 8
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:19:33) 
-- CODE:
from math import*

x = int(input("valor de x:"))

	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '0.57'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
